syntax = "proto3";

package ocx.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/ocx/backend/gen/proto/v1;ocxv1";

// The core service for real-time traffic assessment.
service TrafficAssessor {
  // Bidirectional stream allows the Interceptor to send packets 
  // and receive verdicts asynchronously without closing the connection.
  rpc InspectTraffic(stream AssessmentRequest) returns (stream AssessmentResponse);
}

// Metadata about the originating process and network context
message TrafficMetadata {
  uint32 pid = 1;                 // Process ID from eBPF
  string comm = 2;                // Process name (e.g., "python3", "curl")
  uint32 file_descriptor = 3;     // FD of the socket
  string source_address = 4;      // Captured IP
  uint32 source_port = 5;         // Captured Port
  string destination_address = 6; 
  uint32 destination_port = 7;
  string tenant_id = 8;           // Multi-tenancy context
  uint64 cgroup_id = 9;           // Container/Pod ID
}

message AssessmentRequest {
  string request_id = 1;          // UUID for tracking through the pipeline
  uint64 sequence_number = 2;     // For ordering
  google.protobuf.Timestamp captured_at = 3;
  google.protobuf.Duration timeout = 4; // Max time Jury has to decide
  TrafficMetadata metadata = 5;
  bytes raw_payload = 6;          // The intercepted buffer (max 1024 bytes)
  ProtocolType protocol = 7;
}

message AssessmentResponse {
  string request_id = 1;          // Must match the AssessmentRequest ID
  Verdict verdict = 2;
  float confidence_score = 3;     // 0.0 to 1.0
  string reasoning = 4;           // Optional: Why the Jury made this choice
  map<string, string> metadata = 5; // Extensible fields (e.g., "new_ttl": "60")
}

enum ProtocolType {
  PROTOCOL_TYPE_UNSPECIFIED = 0;
  PROTOCOL_TYPE_TCP = 1;
  PROTOCOL_TYPE_HTTP = 2;
  PROTOCOL_TYPE_TLS = 3;
  PROTOCOL_TYPE_DNS = 4;
}

message Verdict {
  enum Action {
    ACTION_ALLOW = 0;
    ACTION_BLOCK = 1;
    ACTION_MITIGATE = 2;         // Modify payload before passing it on
    ACTION_OBSERVE = 3;          // Allow but log more aggressively
    ACTION_HOLD = 4;             // Hold for further analysis
  }
  Action action = 1;
  float trust_level = 2;         // Updated trust level 0.0-1.0
}
